# ci-probe

./: .gitignore  Cargo.toml  README.md  ciprobe-example.yml
.github/workflows/: ci.yml  release.yml
pipelines/: ci.yml  release.yml
src/: analyzer.rs  cli.rs  cli_handler.rs  collector.rs  config.rs  error.rs  git_manager.rs  lib.rs  line_parser.rs  main.rs  pipeline_analyzer.rs  pipeline_detector.rs  report.rs  task_issues.rs  task_types.rs  utils.rs  yaml_parser.rs
tests/: integration_tests.rs  line_parser_tests.rs  task_state_tests.rs  test_list_all_task_states-gavinconfig.yml  test_report_generation-ciprobeconfig.yml  test_report_generation-gavinconfig.yml  utils_tests.rs  version_tests.rs
