[package]
name = "ciprobe"
version = "1.0.10"
edition = "2021"

[lib]
name = "ciprobe"
path = "src/lib.rs"

[[bin]]
name = "ciprobe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
regex = "1.11"
chrono = "0.4"
tokio = { version = "1.41", features = ["full"] }
semver = "1.0"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.14"
